--- a/examples/index.html
+++ b/examples/index.html
@@ -1,1 +1,95 @@
-index.html
+<html>
+  <head>
+    <script src="../lib/defer-images.js"></script>
+    <script src="../lib/defer-bg.js"></script>
+    <script src="../lib/defer-dom.js"></script>
+    <style>
+      body {
+        background-color: #888;
+      }
+      #container {
+        display: block;
+      }
+      img {
+        display: inline-block;
+        border: 4px solid white;
+      }
+      .nest {
+        display: block;
+        margin: 30px;
+        border: 3px solid orange;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div id="container">
+      <!-- register derferImages to listen for images added to dom -->
+      <script>defer.images.start(document.getElementById("container"));</script>
+
+      <img class="defer" data-src="http://placekitten.com/700/310" height="310" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/370" height="370" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/340" height="340" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/640" height="640" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/520" height="520" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/600" height="600" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/660" height="660" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/540" height="540" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/340" height="340" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/470" height="470" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/530" height="530" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/300" height="300" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/410" height="410" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/430" height="430" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/480" height="480" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/510" height="510" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/390" height="390" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/310" height="310" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/450" height="450" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/380" height="380" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/570" height="570" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/670" height="670" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/360" height="360" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/440" height="440" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/580" height="580" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/600" height="600" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/660" height="660" src="placeholder.gif" width="700">
+
+      <div class="nest">
+        <h3>Nested Container</h3>
+        <img class="defer" data-src="http://placekitten.com/700/370" height="370" src="placeholder.gif" width="700">
+        <img class="defer" data-src="http://placekitten.com/700/580" height="580" src="placeholder.gif" width="700">
+
+        <div class="nest">
+          <h3>Nested Container</h3>
+          <img class="defer" data-src="http://placekitten.com/700/370" height="370" src="placeholder.gif" width="700">
+          <img class="defer" data-src="http://placekitten.com/700/580" height="580" src="placeholder.gif" width="700">
+        </div>
+      </div>
+
+      <img class="defer" data-src="http://placekitten.com/700/440" height="440" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/650" height="650" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/350" height="350" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/410" height="410" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/630" height="630" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/590" height="590" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/510" height="510" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/550" height="550" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/640" height="640" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/330" height="330" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/550" height="550" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/600" height="600" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/510" height="510" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/540" height="540" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/480" height="480" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/380" height="380" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/460" height="460" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/470" height="470" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/550" height="550" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/420" height="420" src="placeholder.gif" width="700">
+      <img class="defer" data-src="http://placekitten.com/700/480" height="480" src="placeholder.gif" width="700">
+
+      <script>defer.images.done();</script>
+    </div>
+  </body>
+</html>
