moving example to root

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <script src="../lib/defer.js"></script>
-    <script src="../lib/defer-images.js"></script>
-    <script src="../lib/defer-bg.js"></script>
-    <script src="../lib/defer-dom.js"></script>
+    <script src="lib/defer.js"></script>
+    <script src="lib/defer-images.js"></script>
+    <script src="lib/defer-bg.js"></script>
+    <script src="lib/defer-dom.js"></script>
     <style>
       body {
         background-color: #888;
