moving back to examples folder

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="./lib/defer.js"></script>
+    <script src="../lib/defer.js"></script>
     <script src="../lib/defer-images.js"></script>
     <script src="../lib/defer-bg.js"></script>
     <script src="../lib/defer-dom.js"></script>
