adding failsafe for missing window load
also using timeout insted of interval

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,6 +2,7 @@
 <head>
   <script src="../lib/defer.js"></script>
   <script src="../lib/defer-bg.js"></script>
+  <script>defer.showConsole = true;</script>
   <style>
     body {
       background-color: #888;
