ability to add all images based on class instead of one at a time

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,15 +15,6 @@
       display: inline-block;
       border: 4px solid white;
     }
-    .marker {
-      color: white;
-      width: 20px;
-      height: 20px;
-      padding: 4px;
-      font-family: Arial;
-      background-color: red;
-      content: "foo";
-    }
     .nest {
       display: block;
       margin: 30px;
@@ -32,99 +23,55 @@
   </style>
 </head>
 
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/310" height="310" src="placeholder.gif" width="700">
-<span class="marker">01</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/370" height="370" src="placeholder.gif" width="700">
-<span class="marker">02</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/340" height="340" src="placeholder.gif" width="700">
-<span class="marker">03</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/640" height="640" src="placeholder.gif" width="700">
-<span class="marker">04</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/520" height="520" src="placeholder.gif" width="700">
-<span class="marker">05</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/600" height="600" src="placeholder.gif" width="700">
-<span class="marker">06</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/660" height="660" src="placeholder.gif" width="700">
-<span class="marker">07</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/540" height="540" src="placeholder.gif" width="700">
-<span class="marker">08</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/340" height="340" src="placeholder.gif" width="700">
-<span class="marker">09</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/470" height="470" src="placeholder.gif" width="700">
-<span class="marker">10</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/530" height="530" src="placeholder.gif" width="700">
-<span class="marker">11</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/300" height="300" src="placeholder.gif" width="700">
-<span class="marker">12</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/410" height="410" src="placeholder.gif" width="700">
-<span class="marker">13</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/430" height="430" src="placeholder.gif" width="700">
-<span class="marker">14</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/480" height="480" src="placeholder.gif" width="700">
-<span class="marker">15</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/510" height="510" src="placeholder.gif" width="700">
-<span class="marker">16</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/390" height="390" src="placeholder.gif" width="700">
-<span class="marker">17</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/310" height="310" src="placeholder.gif" width="700">
-<span class="marker">18</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/450" height="450" src="placeholder.gif" width="700">
-<span class="marker">19</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/380" height="380" src="placeholder.gif" width="700">
-<span class="marker">20</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/570" height="570" src="placeholder.gif" width="700">
-<span class="marker">21</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/670" height="670" src="placeholder.gif" width="700">
-<span class="marker">22</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/360" height="360" src="placeholder.gif" width="700">
-<span class="marker">23</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/440" height="440" src="placeholder.gif" width="700">
-<span class="marker">24</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/580" height="580" src="placeholder.gif" width="700">
-<span class="marker">25</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/600" height="600" src="placeholder.gif" width="700">
-<span class="marker">26</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/660" height="660" src="placeholder.gif" width="700">
-<span class="marker">27</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/440" height="440" src="placeholder.gif" width="700">
-<span class="marker">28</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/650" height="650" src="placeholder.gif" width="700">
-<span class="marker">29</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/350" height="350" src="placeholder.gif" width="700">
-<span class="marker">30</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/410" height="410" src="placeholder.gif" width="700">
-<span class="marker">31</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/630" height="630" src="placeholder.gif" width="700">
-<span class="marker">32</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/590" height="590" src="placeholder.gif" width="700">
-<span class="marker">33</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/510" height="510" src="placeholder.gif" width="700">
-<span class="marker">34</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/550" height="550" src="placeholder.gif" width="700">
-<span class="marker">35</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/640" height="640" src="placeholder.gif" width="700">
-<span class="marker">36</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/330" height="330" src="placeholder.gif" width="700">
-<span class="marker">37</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/550" height="550" src="placeholder.gif" width="700">
-<span class="marker">38</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/600" height="600" src="placeholder.gif" width="700">
-<span class="marker">39</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/510" height="510" src="placeholder.gif" width="700">
-<span class="marker">40</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/540" height="540" src="placeholder.gif" width="700">
-<span class="marker">41</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/480" height="480" src="placeholder.gif" width="700">
-<span class="marker">42</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/380" height="380" src="placeholder.gif" width="700">
-<span class="marker">43</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/460" height="460" src="placeholder.gif" width="700">
-<span class="marker">44</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/470" height="470" src="placeholder.gif" width="700">
-<span class="marker">45</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/550" height="550" src="placeholder.gif" width="700">
-<span class="marker">46</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/420" height="420" src="placeholder.gif" width="700">
-<span class="marker">47</span>
-<img onload="defer.add(this);" data-src="http://placekitten.com/700/480" height="480" src="placeholder.gif" width="700">
-<span class="marker">48</span>
+<img class="deferImg" data-src="http://placekitten.com/700/310" height="310" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/370" height="370" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/340" height="340" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/640" height="640" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/520" height="520" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/600" height="600" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/660" height="660" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/540" height="540" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/340" height="340" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/470" height="470" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/530" height="530" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/300" height="300" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/410" height="410" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/430" height="430" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/480" height="480" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/510" height="510" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/390" height="390" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/310" height="310" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/450" height="450" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/380" height="380" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/570" height="570" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/670" height="670" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/360" height="360" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/440" height="440" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/580" height="580" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/600" height="600" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/660" height="660" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/440" height="440" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/650" height="650" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/350" height="350" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/410" height="410" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/630" height="630" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/590" height="590" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/510" height="510" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/550" height="550" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/640" height="640" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/330" height="330" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/550" height="550" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/600" height="600" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/510" height="510" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/540" height="540" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/480" height="480" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/380" height="380" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/460" height="460" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/470" height="470" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/550" height="550" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/420" height="420" src="placeholder.gif" width="700">
+<img class="deferImg" data-src="http://placekitten.com/700/480" height="480" src="placeholder.gif" width="700">
+
+<script type="text/javascript">
+  defer.addImages('deferImg');
+</script>
